# pyiron_workflow_atomistics

./: .coveragerc  .gitattributes  .gitignore  2025_05_26_GB_Opt_Example.ipynb  2025_06_04_GB_cleavage.ipynb  CHANGELOG.md  asdf.vasp  github_dev.code-workspace  pyproject.toml  pytest.ini  test.vasp  update_module_name.sh  versioneer.py  working_surface_example.py
.binder/: environment.yml  postBuild
.ci_support/: environment.yml  exclude  lower_bound.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml  preview-release.yml  push-pull.yml  release.yml
2025_04_29_FeGB_Segregation_Workflows/: 1_EOS-fromatomistics.ipynb  1_EOS.ipynb  KSP_025_HanBaptFerro_Threshold0.2_vanilla.yaml
2025_04_29_FeGB_Segregation_Workflows/final_model/: fingerprint.pb  metadata.yaml  saved_model.pb
2025_04_29_FeGB_Segregation_Workflows/final_model/variables/: variables.data-00000-of-00001  variables.index
docs/: README.md  conf.py  environment.yml  index.rst
docs/design/: README.md
docs/design/plans/: 2026-05-12-engine-conformance-suite.md  2026-05-12-pyiron-workflow-atomistics-cleanup.md  2026-05-14-phono3py-thermal-conductivity.md  2026-05-15-calphy-free-energy-interface.md  2026-05-15-dynaphopy-md-renormalisation.md  2026-05-15-free-energy-consolidation.md  2026-05-15-grand-canonical-gb.md  2026-06-27-melting-point-VERIFICATION.md  2026-06-27-melting-point-interface-method.md
docs/design/specs/: 2026-05-12-engine-conformance-suite-design.md  2026-05-12-pyiron-workflow-atomistics-cleanup-design.md  2026-05-13-phono3py-thermal-conductivity-design.md  2026-05-15-calphy-free-energy-interface-design.md  2026-05-15-dynaphopy-md-renormalisation-design.md  2026-05-15-free-energy-consolidation-design.md  2026-05-15-grand-canonical-gb-design.md  2026-06-27-melting-point-interface-method-design.md
docs/superpowers/plans/: 2026-05-12-pyiron-workflow-atomistics-cleanup.md  2026-06-04-elastic-constants.md
docs/superpowers/specs/: 2026-06-04-elastic-constants-design.md
get_gbstruct_from_gbcode/: recovery.pckl
notebooks/: .gitignore  20250713_GB_Opt_Seg_Cleave.ipynb  2025_05_26_GB_Lammps.ipynb  2025_05_26_GB_Opt_Example.ipynb  2025_06_04_GB_cleavage.ipynb  2025_06_09_Bulk.ipynb  2025_06_10_GB_Opt_Example copy.ipynb  2025_06_10_GB_Opt_Example.ipynb  2025_07_25_test.ipynb  2025_07_31_LoopGBCodePureGBStudy.ipynb  2025_08_06_Segregation.ipynb  EnginePrototype.ipynb  EnginePrototype_lammps.ipynb  _build_elastic_notebook.py  _kappa_driver.py  bulk_solution_energy.ipynb  dynaphopy_emt_example.ipynb  dynaphopy_grace_example.ipynb  dynaphopy_grace_example_long.ipynb  elastic_constants.ipynb  eos.ipynb  equations_of_state.ipynb  equations_of_state_ase.ipynb  example.ipynb  foundation_model_example.ipynb  free_energy_solid.ipynb  gb_cleavage.ipynb  grain_boundary_segregation.ipynb  grand_canonical_gb_example.ipynb  notebook_blank.ipynb  optimise_lattice_parameter.ipynb  phonon_thermal_conductivity.ipynb  pure_grain_boundary_study.ipynb  structure_optimisation.ipynb  substitutional_formation_energy.ipynb  surface_energy.ipynb  vacancy_formation_energy.ipynb
notebooks/calc_output/: final_results.json  final_structure.xyz  initial_results.json  initial_structure.xyz  trajectory.xyz  trajectory_results.json
pyiron_workflow_atomistics/: __init__.py  _version.py  ase_calculator.py  ase_engine.py  bulk.py  calculator.py  calculator_engine.py  dataclass_storage.py  featurisers.py  temp_gbcode_generator.py  utils.py
pyiron_workflow_atomistics.egg-info/: PKG-INFO  requires.txt
pyiron_workflow_atomistics/_internal/: __init__.py  dataclass_helpers.py  engine_output.py  kwargs_helpers.py  workdir.py
pyiron_workflow_atomistics/analysis/: __init__.py  featurisers.py  gb_plane.py  quantities.py  structure_descriptors.py  trajectory.py
pyiron_workflow_atomistics/ase/: README.md  ase.py  ase_calculator.py
pyiron_workflow_atomistics/bulk_defect/: point.py  vacancy.py
pyiron_workflow_atomistics/engine/: __init__.py  ase.py  inputs.py  protocol.py
pyiron_workflow_atomistics/engine_ase/: __init__.py  ase.py  ase_calculator.py
pyiron_workflow_atomistics/gb/: analysis.py  cleavage.py  dataclass_storage.py  gb_cleavage.py  gb_optimiser.py  gb_study.py  hcp_generator.py  optimiser.py  segregation.py  utils.py
pyiron_workflow_atomistics/gb/gb_code/: constructor.py  csl_generator.py  gb_generator.py  searcher.py
pyiron_workflow_atomistics/physics/: __init__.py  bulk.py  elastic.py  grain_boundary.py  grand_canonical_gb.py  point_defect.py  surface.py
pyiron_workflow_atomistics/physics/_grain_boundary_code/: __init__.py  constructor.py  searcher.py
pyiron_workflow_atomistics/structure/: __init__.py  build.py  defects.py  transform.py
pyiron_workflow_atomistics/structure_manipulator/: interstitials.py  tools.py
pyiron_workflow_atomistics/surface/: builder.py  surface_study.py  utils.py
pyiron_workflow_atomistics/testing/: __init__.py  engine_conformance.py
scripts/: _verify_emt_demo.py  _verify_grace_ase_step1.py  _verify_lammps_grace_coex.py  _verify_lammps_grace_smoke.py  meltingpoint.py  submit_grace_verify.sh
tests/: README.md  TEST_SUMMARY.md  conftest.py  run_tests.py
tests/integration/: test_ase_npt_metal.py  test_gb_code_pipeline.py  test_gco_emt.py  test_melting_coexistence.py  test_melting_initial_guess.py  test_melting_md_steps.py  test_melting_scan.py  test_melting_study.py  test_meltingpoint_script.py  test_notebook_execution.py  test_workflow_integration.py
tests/resources/: GB.vasp
tests/unit/: test_bulk.py  test_calculator.py  test_featurisers.py  test_find_gb_plane_branches.py  test_gb_analysis.py  test_gb_cleavage.py  test_gb_code.py  test_small_utils.py  test_testing_namespace.py  test_tests.py  test_transform.py  test_utils.py  test_version.py
verification/: .gitignore  README.md  aggregate.py  elastic_grace_vs_mp.py  fetch_mp_references.py  submit_gpudev.sh
verification/results/: Al.csv  Al.json  Cu.csv  Cu.json  Fe.csv  Fe.json  Ni.csv  Ni.json  SUMMARY.md  Si.csv  Si.json  W.csv  W.json  combined.csv
(+121 files in other folders)
