[build-system]
requires = [
    "pyiron_base",
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_workflow_atomistics"
description = "A pyiron module for atomistic simulation workflows"
readme = "docs/README.md"
keywords = ["pyiron", "atomistics", "workflow"]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy<2.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "ase>=3.22.0",
    "scipy>=1.7.0",
    "pyiron_workflow",
    "pymatgen>=2024.8.8",
    "pyiron_snippets",
    "scikit-learn>=1.0.0"
]
dynamic = ["version"]
authors = [
    { name = "pyiron team", email = "pyiron@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://pyiron_workflow_atomistics.readthedocs.io"
Repository = "https://github.com/pyiron/pyiron_workflow_atomistics"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_workflow_atomistics/_version.py"
parentdir_prefix = "pyiron_workflow_atomistics"
tag_prefix = "pyiron_workflow_atomistics-"

[tool.setuptools.packages.find]
include = [ "pyiron_workflow_atomistics*",]

[tool.setuptools.dynamic.version]
attr = "pyiron_workflow_atomistics.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''