[build-system]
requires = [
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_workflow_atomistics"
description = "A pyiron module for atomistic simulation workflows"
readme = { file = "docs/README.md", content-type = "text/markdown" }
keywords = ["pyiron", "atomistics", "workflow"]
requires-python = ">=3.9, <3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.2",
    "matplotlib==3.10.6",
    "ase==3.26.0",
    "scipy==1.16.2",
    "pyiron-workflow==0.15.2",
    "pymatgen==2025.6.14",
    "pyiron_snippets==0.2.0",
    "scikit-learn==1.7.2"
]
dynamic = ["version"]
authors = [
    { name = "pyiron team", email = "pyiron@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://pyiron_workflow_atomistics.readthedocs.io"
Repository = "https://github.com/pyiron/pyiron_workflow_atomistics"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_workflow_atomistics/_version.py"
parentdir_prefix = "pyiron_workflow_atomistics"
tag_prefix = "pyiron_workflow_atomistics-"

[tool.setuptools.packages.find]
include = [ "pyiron_workflow_atomistics*",]

[tool.setuptools.dynamic.version]
attr = "pyiron_workflow_atomistics.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''
